<resources>
    <string name="app_name">Socialise</string>
    <string name="app_welcome">Welcome to Socialise</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="title_activity_mean">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_post">Post</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_follow">Follow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>